tests/fixtures/invalid/bytes_bitand_float.py
# Cannot bitwise AND Bytes and Float
x: float = b"hello" & 1.0
